# fluxgraph

./: .gitignore  BUG_FIXES_REPORT.md  CHANGELOG.md  COMPETITIVE_ADVANTAGES.md  EXAMPLES.md  MANIFEST.in  PYPI_PUBLISH.md  PYPI_UPLOAD_FIX.md  README.md  UNIQUE_SELLING_POINTS.md  V2.2.0_RELEASE_SUMMARY.md  V2.3.0_RELEASE_SUMMARY.md  directory_tree.txt  github_readme.md  main.py  pypi_readme.md  pyproject.toml  requirements.txt  sessions.db  setup.cfg  setup.py  test_results.json  tree.py
docs/: agents.rst  api_reference.rst  conf.py  examples.rst  index.rst  quickstart.rst
examples/: app.py  cust.py  metrics.py  optimized_llm_agent.py  run_server.py  test.py  test_enterprise_suite.py  test_fluxgraph_server.py  web_scraping_example.py
examples/my_chroma_db/: chroma.sqlite3
fluxgraph/: __init__.py  cli.py  directory_tree.txt
fluxgraph/api/: __init__.py  __main__.py  designer_routes.py  main.py  playground_routes.py  websocket_routes.py  workflow_routes.py
fluxgraph/core/: advanced_memory.py  app.py  checkpointer.py  logger.py  plugins.py  postgres_checkpointer.py  postgres_logger.py  rag.py  retry.py  universal_rag.py  webhooks.py  workflow_graph.py
fluxgraph/crew/: role_agent.py
fluxgraph/extractors/: __init__.py  data_parser.py  document_extractor.py  web_scraper.py
fluxgraph/middleware/: __init__.py  rate_limiter.py
fluxgraph/models/: __init__.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  provider.py
fluxgraph/multimodal/: __init__.py  processor.py
fluxgraph/orchestration/: __init__.py
fluxgraph/protocols/: __init__.py
fluxgraph/security/: __init__.py  audit_logger.py
my_chroma_db/: chroma.sqlite3
tests/: test_all_features.py
