[metadata]
name = fluxgraph
version = 2.0.0
author = Ihtesham Jahangir
author_email = ceo@alphanetwork.com.pk
description = Production-grade enterprise AI agent orchestration framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ihtesham-jahangir/fluxgraph
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    flux = fluxgraph.core.app:main
